traefik/traefik-expose-apache.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: apache
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ejemplo.marosa.vat`)
      kind: Rule
      services:
        - name: apache
          port: 80
