traefik/traefik-expose-nginx.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ejemplo.marosa.vat`)
      kind: Rule
      services:
        - name: nginx
          port: 80
