traefik/traefik-ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: apache
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`5.224.10.193`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: apache
      port: 80
