traefik/traefik-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
spec:
  ingressClassName: "traefik"
  rules:
  # Example host, it may be changed
  - host: ejemplo.marosa.vat
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # Defaulting to Nginx
            name: nginx
            port:
              number: 80
